[package]
name = "bacnet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bacnet-sys = { path = "../bacnet-sys" }
lazy_static = "1.4.0"
log = "0.4"
failure = "0.1.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_env_logger = "0.4.0"
structopt = "0.3"
