[package]
name = "bacnet"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bacnet-sys = { path = "../bacnet-sys" }
lazy_static = "1.4.0"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4.0"
structopt = "0.3"
